--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,11 +20,14 @@ pool:
 variables:
   buildConfiguration: 'Release'
 
+
+
+jobs:
+- job: Build
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
-
-jobs:
+  
 - job: Work
   steps:
   - script: echo Hello, world!
